--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "mocha": "^2.0.1"
   },
   "dependencies": {
-    "nunjucks": "^3.0.0"
+    "marked": "^0.3.6",
+    "nunjucks": "^3.0.0",
+    "nunjucks-markdown": "^2.0.1"
   }
 }
